--- a/weibo/src/main/resources/config.properties
+++ b/weibo/src/main/resources/config.properties
@@ -3,3 +3,12 @@ redis.host=182.254.136.99
 redis.pwd=maoxinhuan
 redis.port=6379
 redis.timeout=5000
+
+#mysql
+db.driver=com.mysql.jdbc.Driver
+db.host=127.0.0.1
+db.port=3306
+db.database=weibo
+db.user=root
+db.password=mxh0901
+db.url=jdbc:mysql://${db.host}:${db.port}/${db.database}?useUnicode=true&amp;characterEncoding=utf-8
