--- a/weibo/pom.xml
+++ b/weibo/pom.xml
@@ -112,18 +112,18 @@
 			<version>1.8.10</version>
 		</dependency>
 
-		
+
 		<!-- shiro -->
-	<!-- <dependency> <groupId>org.apache.shiro</groupId> <artifactId>shiro-core</artifactId> 
-		<version>1.2.5</version> </dependency> <dependency> <groupId>org.apache.shiro</groupId> 
-		<artifactId>shiro-web</artifactId> <version>1.2.5</version> </dependency> 
-		<dependency> <groupId>org.apache.shiro</groupId> <artifactId>shiro-spring</artifactId> 
-		<version>1.2.5</version> </dependency> <dependency> <artifactId>quartz</artifactId> 
-		<groupId>org.opensymphony.quartz</groupId> <version>1.6.1</version> </dependency> 
-		<dependency> <groupId>org.apache.shiro</groupId> <artifactId>shiro-all</artifactId> 
-		<version>1.2.5</version> </dependency> <dependency> <groupId>org.apache.shiro</groupId> 
-		<artifactId>shiro-quartz</artifactId> <version>1.2.5</version> </dependency> 
-		shiro -->
+		<!-- <dependency> <groupId>org.apache.shiro</groupId> <artifactId>shiro-core</artifactId> 
+			<version>1.2.5</version> </dependency> <dependency> <groupId>org.apache.shiro</groupId> 
+			<artifactId>shiro-web</artifactId> <version>1.2.5</version> </dependency> 
+			<dependency> <groupId>org.apache.shiro</groupId> <artifactId>shiro-spring</artifactId> 
+			<version>1.2.5</version> </dependency> <dependency> <artifactId>quartz</artifactId> 
+			<groupId>org.opensymphony.quartz</groupId> <version>1.6.1</version> </dependency> 
+			<dependency> <groupId>org.apache.shiro</groupId> <artifactId>shiro-all</artifactId> 
+			<version>1.2.5</version> </dependency> <dependency> <groupId>org.apache.shiro</groupId> 
+			<artifactId>shiro-quartz</artifactId> <version>1.2.5</version> </dependency> 
+			shiro -->
 		<!-- redis begin -->
 		<dependency>
 			<groupId>redis.clients</groupId>
@@ -131,6 +131,23 @@
 			<version>2.8.0</version>
 		</dependency>
 		<!-- redis end -->
+
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.9.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.8.8</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.8.8</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>weibo</finalName>
@@ -168,6 +185,24 @@
 						<version>1.4</version>
 					</dependency>
 				</dependencies>
+			</plugin>
+
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
