--- a/weibo/src/main/resources/config.properties
+++ b/weibo/src/main/resources/config.properties
@@ -6,9 +6,9 @@ redis.timeout=5000
 
 #mysql
 db.driver=com.mysql.jdbc.Driver
-db.host=127.0.0.1
+db.host=115.159.82.98
 db.port=3306
 db.database=weibo
 db.user=root
-db.password=mxh0901
+db.password=8200506
 db.url=jdbc:mysql://${db.host}:${db.port}/${db.database}?useUnicode=true&amp;characterEncoding=utf-8
