--- a/weibo/src/main/webapp/WEB-INF/web.xml
+++ b/weibo/src/main/webapp/WEB-INF/web.xml
@@ -48,5 +48,9 @@
         <!-- 此处可以可以配置成*.do，对应struts的后缀习惯 -->
         <url-pattern>*.do</url-pattern>
     </servlet-mapping>
+    
+    <welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+	</welcome-file-list>
   
 </web-app>
