--- a/weibo/src/main/resources/log4j.properties
+++ b/weibo/src/main/resources/log4j.properties
@@ -4,3 +4,19 @@ log4j.appender.Console=org.apache.log4j.ConsoleAppender
 log4j.appender.Console.Target=System.out
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern=[%p][%d{yyyy-MM-dd HH\:mm\:ss,SSS}][%c]%m%n
+
+log4j.appender.logfile=org.apache.log4j.RollingFileAppender
+log4j.appender.logfile.File=/home/weibo/web/web.log
+log4j.appender.logfile.MaxFileSize=50000KB
+log4j.appender.logfile.MaxBackupIndex=50
+log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
+log4j.appender.logfile.layout.ConversionPattern=%p %d [%c] [%t] - %m%n
+
+# Save ERROR LOG
+log4j.appender.errorlogfile=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.errorlogfile.File=/home/weibo/web/error.log
+log4j.appender.errorlogfile.DatePattern=.yyyy-MM-dd
+log4j.appender.errorlogfile.Append=true
+log4j.appender.errorlogfile.Threshold=ERROR
+log4j.appender.errorlogfile.layout=org.apache.log4j.PatternLayout
+log4j.appender.errorlogfile.layout.ConversionPattern=%p %d [%c] [%t] - %m%n
