--- a/weibo/src/main/resources/config.properties
+++ b/weibo/src/main/resources/config.properties
@@ -11,4 +11,4 @@ db.port=3306
 db.database=weibo
 db.user=root
 db.password=8200506
-db.url=jdbc:mysql://${db.host}:${db.port}/${db.database}?useUnicode=true&amp;characterEncoding=utf-8
+db.url=jdbc:mysql://${db.host}:${db.port}/${db.database}?characterEncoding=utf-8&autoReconnect=true
