--- a/weibo/pom.xml
+++ b/weibo/pom.xml
@@ -17,6 +17,12 @@
 	
 	<dependencies>
 		<dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+	
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
