--- a/weibo/src/main/webapp/WEB-INF/web.xml
+++ b/weibo/src/main/webapp/WEB-INF/web.xml
@@ -32,6 +32,16 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+	<filter>
+		<filter-name>RequestFilter</filter-name>
+		<filter-class>com.mxh.weibo.web.filter.RequestFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>RequestFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+
 	<!-- <filter>
 		<filter-name>shiroFilter</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
