前端 真的要重构了

--- a/weibo/src/main/resources/config.properties
+++ b/weibo/src/main/resources/config.properties
@@ -4,11 +4,17 @@ redis.pwd=maoxinhuan
 redis.port=6379
 redis.timeout=5000
 
-#mysql
-db.driver=com.mysql.jdbc.Driver
-db.host=115.159.82.98
+
+db.host=localhost
 db.port=3306
 db.database=weibo
 db.user=root
-db.password=8200506
+db.password=1234
+#mysql
+db.driver=com.mysql.jdbc.Driver
+#db.host=115.159.82.98
+#db.port=3306
+#db.database=weibo
+#db.user=root
+#db.password=8200506
 db.url=jdbc:mysql://${db.host}:${db.port}/${db.database}?characterEncoding=utf-8&autoReconnect=true
