--- a/weibo/src/main/webapp/WEB-INF/web.xml
+++ b/weibo/src/main/webapp/WEB-INF/web.xml
@@ -12,9 +12,12 @@
 			classpath:/spring/spring.xml
 		</param-value>
 	</context-param>
-
+	<listener>    
+	    <listener-class> org.springframework.web.context.request.RequestContextListener</listener-class>    
+	</listener>   
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+		
 	</listener>
 
 	<!-- 编码过滤器 -->
